--- a/src/Components/Sidebar/SuggestionsMenu.module.scss
+++ b/src/Components/Sidebar/SuggestionsMenu.module.scss
@@ -32,7 +32,8 @@
   }
 }
 
-.searchItem>i {
-  margin-right: 10px;
-  font-size: .7rem;
+.searchItem>svg {
+  fill: #fff;
+  width: 15px;
+  height: 15px;
 }
