--- a/src/Components/Shared/NotFoundPage/Error404.module.scss
+++ b/src/Components/Shared/NotFoundPage/Error404.module.scss
@@ -9,7 +9,10 @@
 
 .errorContainer .error404 {
   display: flex;
-  gap: 30px;
+}
+
+.error404>*:not(:last-child) {
+  margin-right: 30px;
 }
 
 @media (max-width: 660px) {
