--- a/src/Components/Shared/Mods/Mods.module.scss
+++ b/src/Components/Shared/Mods/Mods.module.scss
@@ -14,13 +14,11 @@
 .buttonsWrapper {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .hidedButtonsOnFocusMode {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .focusMode {
@@ -40,6 +38,10 @@
   cursor: pointer;
   opacity: .7;
   transition: opacity .2s;
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 
   &:hover {
     opacity: 1;
