make print papers cleaner

--- a/src/Components/Shared/MiniComponents/HooksNavigator.module.scss
+++ b/src/Components/Shared/MiniComponents/HooksNavigator.module.scss
@@ -5,6 +5,12 @@
   align-items: center;
 }
 
+@media print {
+  .wrapper {
+    display: none;
+  }
+}
+
 .wrapper>button {
   z-index: 1;
   position: relative;
