--- a/src/Components/Shared/Mods/Mods.module.scss
+++ b/src/Components/Shared/Mods/Mods.module.scss
@@ -11,6 +11,12 @@
   z-index: 99;
 }
 
+@media print {
+  .modsContainer {
+    display: none;
+  }
+}
+
 .buttonsWrapper {
   display: flex;
   flex-direction: column;
