--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -146,6 +146,12 @@ svg {
   }
 }
 
+@media print {
+  .skip-content {
+    display: none;
+  }
+}
+
 .linenumber {
   color: var(--codeBlockLinesNumbersColor) !important;
   min-width: 20px !important;
