--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -30,9 +30,8 @@
   --cyan-blue: #2483ff;
   --very-cyan-blue: #0088ff;
   --cyan-blue2: #275efe;
-  --cyan-blue-hover: #275efe;
+  --cyan-blue-hover: #1c55ff;
   --dark-cyan: #184fee;
-  --dark-cyan-hover: #0e44e8;
   --light-green: #64ffda;
   --orange: #ffa500;
 }
