--- a/src/Components/Sidebar/SideBar.module.scss
+++ b/src/Components/Sidebar/SideBar.module.scss
@@ -34,6 +34,10 @@
   opacity: 0;
 }
 
+.sidebarWrapper.shortcutMenu {
+  z-index: 98;
+}
+
 .sidebarButton {
   background-color: transparent;
   position: fixed;
@@ -41,7 +45,7 @@
   top: 30px;
   padding: 10px;
   cursor: pointer;
-  z-index: 100;
+  z-index: 98;
   transition: opacity .2s;
 
   &:hover {
