--- a/src/Components/Shared/Mods/Shortcut.module.scss
+++ b/src/Components/Shared/Mods/Shortcut.module.scss
@@ -7,7 +7,7 @@
   height: fit-content;
 
   &:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 10.2px;
   }
 }
 
@@ -31,8 +31,8 @@
   color: var(--white);
   font-weight: 500;
   border: solid 1px #363636;
-  height: 34px;
-  // width: fit-content;
+  height: 35px;
+  min-width: 35px;
   padding: 0 10.87px;
   border-radius: 4px;
   font-size: 1rem;
