--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -175,3 +175,21 @@ svg {
 .noPaddingLeft {
   padding-left: 0 !important;
 }
+
+
+
+
+
+.toolTip {
+  --tooltip-bg-color: #6e7681;
+  display: inline-block;
+  position: absolute;
+  width: max-content;
+  background-color: var(--tooltip-bg-color);
+  border-radius: 5px;
+  padding: 6px 8px;
+  user-select: none;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .1s ease;
+}
