--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -17,6 +17,7 @@
   --error-guy-color2: #2b2b2b;
   --gray-purple: #575c71;
   --gray-purple-secondary: #70768f;
+  --tooltip-bg-color: #6e7681;
   --gray: #cccccc;
   --very-light-gray: #f0f0f0;
   --white: #fff;
@@ -59,6 +60,7 @@
   --gray-opacity23: rgba(13, 15, 17, 0.23);
   --gray-purple-secondary: #7e8399;
   --gray-purple: #959ab0;
+  --tooltip-bg-color: #b8bec7;
   --extra-dark-blue: #fff;
   --secondary-black: #fff;
   --third-black: #fff;
