--- a/src/Components/Shared/Mods/Mods.module.scss
+++ b/src/Components/Shared/Mods/Mods.module.scss
@@ -56,6 +56,7 @@
 
   &:focus-visible {
     border-color: var(--cyan-blue);
+    opacity: 1;
   }
 }
 
@@ -77,7 +78,7 @@
   height: 17px;
   cursor: pointer;
   fill: var(--white);
-  transition: opacity .2s, border-color .2s, fill .2s;
+  transition: opacity .2s, fill .04s;
 }
 
 .modsContainer button:focus-visible svg {
