simplify HookExplanation.jsx, removed inline margin for demo links

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -166,16 +166,20 @@ svg {
   }
 }
 
+.noMarginLeft {
+  margin-left: 0 !important;
+}
+
 .noMarginRight {
   margin-right: 0 !important;
 }
 
-.noPaddingRight {
-  padding-right: 0 !important;
-}
-
 .noPaddingLeft {
   padding-left: 0 !important;
+}
+
+.noPaddingRight {
+  padding-right: 0 !important;
 }
 
 .toolTip {
