StarRepo styles for light mode

--- a/src/Components/Shared/Mods/Mods.module.scss
+++ b/src/Components/Shared/Mods/Mods.module.scss
@@ -92,9 +92,9 @@
 }
 
 .modsContainer a {
-  border-color: yellow;
+  border-color: var(--yellow);
 }
 
 .modsContainer a>svg {
-  fill: yellow;
+  fill: var(--yellow);
 }
