--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -30,6 +30,7 @@
   --dark-cyan-hover: #0e44e8;
   --light-green: #64ffda;
   --orange: #ffa500;
+  --yellow: #ffff00;
 }
 
 // Code block variables
@@ -65,6 +66,7 @@
   --secondary-black: #fff;
   --third-black: #fff;
   --dark-gray-opacity5: #2483ff;
+  --yellow: orange;
 }
 
 :root.light-mode {
