RepoStarsForks at sidebar

--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -29,6 +29,7 @@
   --dark-cyan: #184fee;
   --dark-cyan-hover: #0e44e8;
   --light-green: #64ffda;
+  --light-green2: #76ffdf;
   --orange: #ffa500;
   --yellow: #ffff00;
 }
@@ -66,7 +67,8 @@
   --secondary-black: #fff;
   --third-black: #fff;
   --dark-gray-opacity5: #2483ff;
-  --yellow: orange;
+  --light-green2: #ff7300;
+  --yellow: #ff7300;
 }
 
 :root.light-mode {
