--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -4,6 +4,7 @@
   padding: 150px 0 40px;
   margin-top: 40px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   position: relative;
 }
