--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -60,6 +60,7 @@
   --light-green: #070b10;
   --gray: #363636;
   --gray-opacity23: rgba(13, 15, 17, 0.23);
+  --very-dark-purple: #343a8b;
   --gray-purple-secondary: #7e8399;
   --gray-purple: #959ab0;
   --tooltip-bg-color: #b8bec7;
