--- a/src/Components/Shared/GlobalOverlay.module.scss
+++ b/src/Components/Shared/GlobalOverlay.module.scss
@@ -3,7 +3,7 @@
   left: 0;
   top: 0;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - (100vh - 100%));
   background-color: #0f172a84;
   z-index: 99;
   transition: opacity .2s ease-in-out;
