--- a/src/Components/Shared/Mods/Mods.module.scss
+++ b/src/Components/Shared/Mods/Mods.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   right: 15px;
   top: 0;
-  height: 100vh;
+  height: calc(100vh - (100vh - 100%));
   padding: 40px 0;
   display: flex;
   flex-direction: column;
