new scrollbar style

--- a/src/Components/Sidebar/SideBar.module.scss
+++ b/src/Components/Sidebar/SideBar.module.scss
@@ -81,6 +81,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  scrollbar-width: initial;
+  scrollbar-color: initial;
 }
 
 .sidebar.active {
