--- a/src/Components/Home/Hooks/CodeBlock/CodeBlockHeader.module.scss
+++ b/src/Components/Home/Hooks/CodeBlock/CodeBlockHeader.module.scss
@@ -21,13 +21,16 @@
   display: flex;
   align-items: center;
   transition: border-color .2s;
+  position: relative;
+  overflow: hidden;
 
   &:first-child {
     border-top-left-radius: 8px;
   }
 
   &.active {
-    border-bottom-color: #0077ff;
+    border-block-width: 2px;
+    border-bottom-color: var(--golden);
   }
 }
 
@@ -35,6 +38,16 @@
   .fileName {
     font-size: .9rem;
   }
+}
+
+.fileName.active::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  width: 100%;
+  height: 2px;
+  box-shadow: 0px 0px 20px 5px #e6b450bd;
 }
 
 .fileName>svg {
