--- a/src/Components/Home/Introduction/Introduction.module.scss
+++ b/src/Components/Home/Introduction/Introduction.module.scss
@@ -7,19 +7,31 @@
 
 .introduction>h1 {
   color: var(--white);
-  font-size: 3.4rem;
+  font-size: 5.8rem;
   text-wrap: balance;
 }
 
 @include large {
   .introduction>h1 {
-    font-size: 2.8rem;
+    font-size: 6rem;
   }
 }
 
 @include medium {
   .introduction>h1 {
-    font-size: 2.5rem;
+    font-size: 5rem;
+  }
+}
+
+@include small {
+  .introduction>h1 {
+    font-size: 2.4rem;
+  }
+}
+
+@include mobile {
+  .introduction>h1 {
+    font-size: 2rem;
   }
 }
 
