--- a/src/Components/Footer/SocialMedia/SocialMedia.module.scss
+++ b/src/Components/Footer/SocialMedia/SocialMedia.module.scss
@@ -1,4 +1,4 @@
-.SocialMedia {
+.socialMedia {
   display: flex;
   align-items: center;
   margin: 0 50px;
@@ -14,20 +14,20 @@
 }
 
 @media (max-width: 1285px) {
-  .SocialMedia {
+  .socialMedia {
     top: 0;
     margin-bottom: 6px;
   }
 }
 
-.SocialMedia a {
+.socialMedia a {
   outline: none;
   cursor: pointer;
   border-radius: 4px;
   padding: 14px;
 
   &:focus-visible {
-    outline: solid 2px var(--light-green);
+    outline: solid 2px var(--golden);
   }
 
   &:not(:last-child) {
@@ -35,18 +35,18 @@
   }
 }
 
-.SocialMedia a:focus-visible svg {
-  fill: var(--light-green);
+.socialMedia a:focus-visible svg {
+  fill: var(--golden);
 }
 
-.SocialMedia a svg {
+.socialMedia a svg {
   fill: #78819a;
   width: 22px;
   height: 22px;
   transition: fill .2s, transform .2s;
 }
 
-.SocialMedia a:hover svg {
+.socialMedia a:hover svg {
   transform: scale(1.06);
-  fill: var(--light-green);
+  fill: var(--golden);
 }
