style: change global text selection background-color

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -9,12 +9,7 @@
 
 ::selection {
   color: var(--white);
-  background-color: var(--dark-cyan-hover);
-}
-
-a::selection {
-  background-color: rgba(135, 135, 135, .621);
-  color: var(--white);
+  background-color: #233554b6;
 }
 
 html {
