--- a/src/Components/Home/Hooks/CodeBlock/CodeBlockHeader.module.scss
+++ b/src/Components/Home/Hooks/CodeBlock/CodeBlockHeader.module.scss
@@ -47,7 +47,7 @@
   bottom: -4px;
   width: 100%;
   height: 2px;
-  box-shadow: 0px 0px 20px 5px #e6b450bd;
+  box-shadow: 0 0 20px 5px #e6b450bd;
 }
 
 .fileName>svg {
